--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h1{
-    color: blue;
+/* barra de navegacion */
+
+.navbar {
+    padding: 2rem;
+    background-color: #f5f6f7;
+}
+
+.navbar-collaps {
+    align-items: center;
+    justify-content: space-between;
 }
